minor modal changes and cleanup

--- a/notebooks/structured_extraction_dev.ipynb
+++ b/notebooks/structured_extraction_dev.ipynb
@@ -6,11 +6,11 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "/Users/brianfitzgerald/Documents/GitHub/smolmodels/.venv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
@@ -22,9 +22,9 @@
     "import tiktoken\n",
     "\n",
     "sys.path.append(\"..\")\n",
-    "from synthetic_data.tasks import _process_gutenberg_row\n",
+    "from synthetic_data.tasks.writing import _process_gutenberg_row\n",
     "from datasets import Dataset\n",
-    "from synthetic_data.tasks import Output, SceneElementType\n",
+    "from synthetic_data.tasks.writing import Output, SceneElementType\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,6 +42,21 @@
     ")[\"train\"]\n",
     "dataset_pl: pl.DataFrame = dataset.to_polars()\n",
     "tiktoken_encoder = tiktoken.get_encoding(\"o200k_base\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import modal\n",
+    "dataset_path = \"dataset_files/screenplay_scenes_summarized_full.parquet\"\n",
+    "local_path = os.path.basename(dataset_path)\n",
+    "weights_volume = modal.Volume.from_name(\"model-weights\")\n",
+    "with open(local_path, \"wb\") as f:\n",
+    "    weights_volume.read_file_into_fileobj(dataset_path, f)"
    ]
   },
   {
@@ -64,11 +79,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "formatted_pq = pl.read_parquet(\"../screenplay_scenes_summarized_full.parquet\")"
+    "formatted_pq = pl.read_parquet(\"../dataset_files/screenplay_scenes_summarized_full.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(12592, 10)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "formatted_pq.shape"
    ]
   },
   {
@@ -77,16 +112,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "formatted_pq[\"prompt\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for row in formatted_pq[1000:1010].iter_rows(named=True):\n",
+    "for row in formatted_pq[0:10].iter_rows(named=True):\n",
     "    output_obj = Output.model_validate_json(row[\"output\"])\n",
     "    for element in output_obj.items:\n",
     "        fmt_str = f\"{element.type.name} - {element.character}\"\n",
@@ -101,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,16 +136,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Filter: 100%|██████████| 10256/10256 [00:00<00:00, 15693.16 examples/s]\n",
-      "Map: 100%|██████████| 9190/9190 [00:01<00:00, 5836.30 examples/s]\n"
+      "Filter: 100%|██████████| 12592/12592 [00:00<00:00, 25655.75 examples/s]\n",
+      "Map: 100%|██████████| 11088/11088 [00:00<00:00, 13720.97 examples/s]\n",
+      "Creating parquet from Arrow format: 100%|██████████| 12/12 [00:00<00:00, 52.03ba/s]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "116489465"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -168,10 +205,9 @@
     "    return True\n",
     "\n",
     "\n",
-    "_gutenberg_to_conversation(formatted_pq[1000].to_dicts()[0])\n",
     "formatted_pq_dataset.filter(_filter_gutenberg_row).map(\n",
     "    _gutenberg_to_conversation, remove_columns=[\"chosen\", \"rejected\", \"source\", \"text\"],\n",
-    ").to_pandas().to_parquet(\"../dataset_files/gutenberg_conversations.parquet\")"
+    ").to_parquet(\"../dataset_files/gutenberg_conversations.parquet\")"
    ]
   }
  ],
