upgrade to uv 0.6 and bump deps

--- a/notebooks/download_offline.ipynb
+++ b/notebooks/download_offline.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,40 @@
     {
      "name": "stderr",
      "output_type": "stream",
-     "text": []
+     "text": [
+      "Fetching 12 files: 100%|██████████| 12/12 [02:19<00:00, 11.66s/it]\n",
+      " 75%|███████▌  | 3/4 [02:24<01:05, 65.22s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/brianfitzgerald/.cache/huggingface/hub/datasets--davidfant--natural-questions-chunk-20/snapshots/abe895987203841705ddd23972f8e288d065a9c9\n",
+      "Downloading zed-industries/zeta\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Fetching 617 files: 100%|██████████| 617/617 [00:24<00:00, 25.65it/s]\n",
+      "100%|██████████| 4/4 [02:48<00:00, 42.19s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/brianfitzgerald/.cache/huggingface/hub/datasets--zed-industries--zeta/snapshots/8f7e77b7dddf5b21d36bd04f054400451eecf7f7\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
     }
    ],
    "source": [
