--- a/notebooks/grpo_trainer_dev.ipynb
+++ b/notebooks/grpo_trainer_dev.ipynb
@@ -12,14 +12,13 @@
     "sys.path.append(\"..\")\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "from trl_wrapper.trainer_wrapper import TrainerWrapper, QWEN_MATH_GRPO_CONFIG, SMOL_LM_135M\n",
+    "from trl_wrapper.trainer_wrapper import TrainerWrapper, GRPO_MATH_CONFIG, SMOL_LM_135M\n",
     "\n",
-    "cfg = QWEN_MATH_GRPO_CONFIG\n",
+    "cfg = GRPO_MATH_CONFIG\n",
     "cfg.notebook_mode = True\n",
     "cfg.model_id_or_path = SMOL_LM_135M\n",
     "cfg.max_samples = 1000\n",
-    "cfg.num_generations = 2\n",
-    "display(dataclasses.asdict(cfg))"
+    "# display(dataclasses.asdict(cfg))"
    ]
   },
   {
