--- a/notebooks/structured_extraction_dev.ipynb
+++ b/notebooks/structured_extraction_dev.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
     "import tiktoken\n",
     "\n",
     "sys.path.append(\"..\")\n",
-    "from synthetic_data.tasks.writing import _process_gutenberg_row\n",
+    "from synthetic_data.tasks.writing import _process_gutenberg_extraction_row\n",
     "from datasets import Dataset\n",
     "from synthetic_data.tasks.writing import Output, SceneElementType\n",
     "\n",
@@ -69,7 +69,7 @@
     "for i, row in enumerate(dataset_pl.head(10).iter_rows(named=True)):\n",
     "    source = row[\"source\"]\n",
     "    display(Markdown(f\"### Sample {i} - {source}\"))\n",
-    "    row_processed = _process_gutenberg_row(row, tiktoken_encoder)\n",
+    "    row_processed = _process_gutenberg_extraction_row(row, tiktoken_encoder)\n",
     "    display(\n",
     "        Markdown(\n",
     "            f\"#### Original ({row_processed['encoded_length']} tokens) \\n {row_processed['text']}\"\n",
