wip on environment

--- a/notebooks/environment_dev.ipynb
+++ b/notebooks/environment_dev.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append(\"..\")\n",
@@ -23,22 +14,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'twenty_questions'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mgyms\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtwenty_questions\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01menv\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m TwentyQuestionsPolicyEnvironment\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msynthetic_data\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mgeneration\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m get_generation_wrapper\n\u001b[1;32m      5\u001b[0m generation_wrapper \u001b[38;5;241m=\u001b[39m get_generation_wrapper(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgpt-4o-mini\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[0;32m~/Documents/GitHub/smolmodels/notebooks/../gyms/__init__.py:1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtwenty_questions\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01menv\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m TwentyQuestionsPolicyEnvironment  \u001b[38;5;66;03m# noqa: F401\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'twenty_questions'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from gyms.twenty_questions.env import TwentyQuestionsPolicyEnvironment\n",
     "from synthetic_data.generation import get_generation_wrapper\n",
@@ -46,6 +24,88 @@
     "\n",
     "generation_wrapper = get_generation_wrapper(\"gpt-4o-mini\")\n",
     "env = TwentyQuestionsPolicyEnvironment(generation_wrapper)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2025-03-01 20:12:28.038\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mgyms.twenty_questions.env\u001b[0m:\u001b[36mstep\u001b[0m:\u001b[36m166\u001b[0m - \u001b[1mNone\u001b[0m\n",
+      "\u001b[32m2025-03-01 20:12:28.038\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msynthetic_data.generation\u001b[0m:\u001b[36mgenerate\u001b[0m:\u001b[36m177\u001b[0m - \u001b[1mGenerating 1 requests with gpt-4o-mini, max RPS: 83.33333333333333\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'content': '\\n'\n",
+      "             'You are an AI agent playing the role of the guesser in a game of '\n",
+      "             'Twenty Questions. Your goal is to guess the secret object, '\n",
+      "             'person, or concept that the other player (the answerer) is '\n",
+      "             'thinking of by asking up to 20 yes-or-no questions.\\n'\n",
+      "             '\\n'\n",
+      "             \"Here are the previous questions you've asked and the answers \"\n",
+      "             \"you've received:\\n\"\n",
+      "             '\\n'\n",
+      "             'You have 19 questions left to ask.\\n'\n",
+      "             '\\n'\n",
+      "             \"Based on the information you've gathered so far, think carefully \"\n",
+      "             'about what question would be most helpful in narrowing down the '\n",
+      "             'possible answers. Your question should be specific and designed '\n",
+      "             'to eliminate as many possibilities as possible.\\n'\n",
+      "             '\\n'\n",
+      "             'If you believe you know the answer before using all 20 '\n",
+      "             'questions, you may make a guess instead of asking another '\n",
+      "             'question. However, be sure you have enough information to make '\n",
+      "             'an educated guess.\\n'\n",
+      "             '\\n'\n",
+      "             'When formulating your next question or making a guess, follow '\n",
+      "             'these steps:\\n'\n",
+      "             '\\n'\n",
+      "             '1. Analyze the previous questions and answers to identify '\n",
+      "             'patterns or key information.\\n'\n",
+      "             '2. Consider what categories or characteristics you still need to '\n",
+      "             'clarify.\\n'\n",
+      "             '3. Formulate a clear, concise yes-or-no question that will '\n",
+      "             'provide valuable information.\\n'\n",
+      "             '\\n'\n",
+      "             'Present your output in the following format:\\n'\n",
+      "             '\\n'\n",
+      "             '<thought>\\n'\n",
+      "             '[Your reasoning process for choosing the next question or making '\n",
+      "             'a guess]\\n'\n",
+      "             '</thought>\\n'\n",
+      "             '\\n'\n",
+      "             '<output>\\n'\n",
+      "             '[If asking a question]: Question: [Your yes-or-no question]\\n'\n",
+      "             '[If making a guess]: Final Guess: [Your guess of the secret '\n",
+      "             'object, person, or concept]\\n'\n",
+      "             '</output>\\n'\n",
+      "             '\\n'\n",
+      "             'Remember, your goal is to guess the correct answer in as few '\n",
+      "             'questions as possible.\\n',\n",
+      "  'role': 'system'}]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(0.0, False)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "env.reset()\n",
+    "await env.step()"
    ]
   }
  ],
